--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       <iframe id="jspianofork" src="https://patrickzhou1234.github.io/JSpianoFORK/"></iframe>
       <iframe id="chesspiece" src="https://patrickzhou1234.github.io/babylonjsmeshhoster/chessboard/"></iframe>
       <img id="musicnote" src="https://i.imgur.com/8ttRRVN.png">
+      <video id="visualizervid" src="https://i.imgur.com/nbGYSMt.mp4" muted autoplay loop></video>
       <button id="test" style="position: absolute;top: 900vh;">scrollenable</button>
     </div>
     <script src="script.js"></script>
