--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="jquery-3.2.1.js"></script>
+    <script src="sweetalert2.all.min.js"></script>
   </head>
   <body onload="onloadanimations()">
     <div id="home">
+      <a href="https://steamcommunity.com/profiles/76561199341649882/" target="_blank"><img title="Steam" class="iconclass" id="steam" src="https://i.imgur.com/FjMBVmO.png"></a>
+      <img title="Valorant" class="iconclass" id="valorant" src="https://i.imgur.com/1jMk7CX.png">
+
       <a href="https://www.instagram.com/moistnugget_p4tricx/" target="_blank"><img title="Instagram" class="iconclass" id="instagram" src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a>
       <a href="mailto:patrickchang44543@gmail.com"><img title="Email" class="iconclass" id="email" src="https://rb.gy/ghvzep"></a>
       <a href="https://github.com/patrickzhou1234" target="_blank"><img title="Github" class="iconclass" id="github" src="https://rb.gy/ycuqxu"></a>
