--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a href="https://discord.com/users/726151990228549705" target="_blank"><img title="Discord" class="iconclass" id="discord" src="https://i.imgur.com/omkJR7W.png"></a>
       <a href="https://open.spotify.com/user/4yjee9wsgz68sav1b0imzd6u5" target="_blank"><img title="Spotify" class="iconclass" id="spotify" src="https://i.imgur.com/WxuzFcW.png"></a>
       <a href="https://ch.tetr.io/u/moist_nugget123" target="_blank"><img title="Tetr.io" class="iconclass" id="tetr" src="https://i.imgur.com/D2L3Art.png"></a>
-      <a href="https://surviv.io/stats/mosin-nagant1" target="_blank"><img title="Surviv.io" class="iconclass" id="surviv" src="https://surviv.io/favicon.ico"></a>
+      <a href="https://surviv.io/stats/player/moistnugget" target="_blank"><img title="Surviv.io" class="iconclass" id="surviv" src="https://surviv.io/favicon.ico"></a>
       <p id="hello">Hello There! I am <strong id="name">Patrick Zhou!</strong> Let's meet.</p>
       <img id="scrolldown1" onclick="scrolldown1()" src="https://rb.gy/g86u45">
     </div>
