--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       <img id="shuttle" src="https://rb.gy/b6xry9">
       <iframe id="jspianofork" src="https://patrickzhou1234.github.io/JSpianoFORK/"></iframe>
       <iframe id="chesspiece" src="https://patrickzhou1234.github.io/babylonjsmeshhoster/chessboard/"></iframe>
-      <img id="musicnote" src="https://i.imgur.com/8ttRRVN.png">
-      <video id="visualizervid" src="https://i.imgur.com/nbGYSMt.mp4" muted autoplay loop></video>
+      <img onclick="linkspotify()" id="musicnote" src="https://i.imgur.com/8ttRRVN.png">
+      <video onclick="linkspotify()" id="visualizervid" src="https://i.imgur.com/nbGYSMt.mp4" muted autoplay loop></video>
       <button id="test" style="position: absolute;top: 900vh;">scrollenable</button>
     </div>
     <script src="script.js"></script>
