--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
       <iframe id="chesspiece" src="https://patrickzhou1234.github.io/babylonjsmeshhoster/chessboard/"></iframe>
       <img onclick="linkspotify()" id="musicnote" src="https://i.imgur.com/8ttRRVN.png">
       <video onclick="linkspotify()" id="visualizervid" src="https://i.imgur.com/nbGYSMt.mp4" muted autoplay loop></video>
+      <textarea id="fakeconsole" readonly>></textarea>
       <button id="test" style="position: absolute;top: 900vh;">scrollenable</button>
     </div>
     <script src="script.js"></script>
