--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
       <img onclick="linkspotify()" id="musicnote" src="https://i.imgur.com/8ttRRVN.png">
       <video onclick="linkspotify()" id="visualizervid" src="https://i.imgur.com/nbGYSMt.mp4" muted autoplay loop></video>
       <div id="consoleoutside" readonly><span id="fakeconsole">></span><span id="cursor">|</span></div>
-      <button id="test" style="position: absolute;top: 900vh;">scrollenable</button>
+    </div>
+    <vl id="break5"></vl>
+    <div>
+      
     </div>
     <script src="script.js"></script>
   </body>
