--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <div id="home">
       <a href="https://steamcommunity.com/profiles/76561199341649882/" target="_blank"><img title="Steam" class="iconclass" id="steam" src="https://i.imgur.com/FjMBVmO.png"></a>
       <img title="Valorant" class="iconclass" id="valorant" src="https://i.imgur.com/1jMk7CX.png">
-
       <a href="https://www.instagram.com/moistnugget_p4tricx/" target="_blank"><img title="Instagram" class="iconclass" id="instagram" src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a>
       <a href="mailto:patrickchang44543@gmail.com"><img title="Email" class="iconclass" id="email" src="https://rb.gy/ghvzep"></a>
       <a href="https://github.com/patrickzhou1234" target="_blank"><img title="Github" class="iconclass" id="github" src="https://rb.gy/ycuqxu"></a>
@@ -35,7 +34,7 @@
     <vl id="break1"></vl>
     <div id="about">
       <div id="textaboutbackground"></div>
-      <p id="textabout">Hi this is the about me section. </p>
+      <p id="textabout">Hi, I'm a 14 year old student and a hobby developer in Fremont. I like to learn more tools to add to my skillset by making projects and games. My projects are displayed on github. I am most active on my <a href="https://discord.com/users/726151990228549705" target="_blank">Discord</a>. If you want to collaborate anytime or ask any questions, please contact me there. Or, you can use the form at the end of this page. </p>
     </div>
     <vl id="break2"></vl>
     <div id="languages">
