--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="jquery-3.2.1.js"></script>
     <script src="sweetalert2.all.min.js"></script>
+    <script src="firebase-app.js"></script>
+    <script src="firebase-database.js"></script>
   </head>
   <body onload="onloadanimations()">
     <div id="home">
